src/objects/PNR__c.object
<CustomObject>
    <fields>
        <fullName>KAL_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KAL Opportunity</label>
        <referenceTo>KAL_Opportunity__c</referenceTo>
        <relationshipLabel>PNR</relationshipLabel>
        <relationshipName>PNR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>People__c</fullName>
        <label>People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test</label>
        <type>Checkbox</type>
    </fields>
    <label>PNR</label>
    <nameField>
        <label>PNR Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>